Use LaTeX2e commands.
	* doc/specs/Makefile (latex2e): New.
	* doc/specs/urbi-specs.tex: Modernize.

--- a/doc/specs/urbi-specs.tex
+++ b/doc/specs/urbi-specs.tex
@@ -1157,7 +1157,7 @@ respect to prototypes. Although performing an \lstinline|updateSlot|
 on a non existent slot is an error, it is valid if the slot is
 inherited from a prototype. In this case, the slot is however not
 updated in the prototype, but rather created in the object itself,
-with the new value. This process is called {\em copy on write}; thanks
+with the new value. This process is called \emph{copy on write}; thanks
 to it, prototypes are not altered when the slot is overridden in a
 child object (see \autoref{lst:copy-on-write}).
 
