--- a/doc/specs/lang.tex
+++ b/doc/specs/lang.tex
@@ -4,24 +4,24 @@
 \section{Syntax}
 \subsection{Comments}
 
-Comments are used to document the code, and are totally ignored by the
+Comments are used to document the code, they are ignored by the
 \us interpreter. \Cxx-style and \C-style comments are supported.
 
 \begin{itemize}
 \item A \lstinline|//| introduces a comment that lasts until the end
   of the line.
 \item A \lstinline|/*| introduces a comment that lasts until
-  \lstinline|*/| is encountered. A difference with \C is that these
-  comments nest; that is, if two \lstinline|/*| are encountered, the
+  \lstinline|*/| is encountered. Comments nest, contrary to \C:
+  if two \lstinline|/*| are encountered, the
   comment will end after two \lstinline|*/|, not one.
 \end{itemize}
 
 \autoref{lst:comments} illustrates this.
 
 \begin{lstlisting}[caption=Comments,label=lst:comments,float=\floatpos]
-  // C++ style comment
-  /* C style comment */
-  /* These comments /* do */ nest */
+// C++ style comment
+/* C style comment */
+/* These comments /* do */ nest */
 \end{lstlisting}
 
 \subsection{Identifiers}
@@ -40,30 +40,30 @@ between simple quotes (\lstinline|'|), in which case they may contain
 any characters, as in \autoref{lst:escape-identifiers}.
 
 \begin{lstlisting}[caption=Identifiers,label=lst:identifiers,float=\floatpos]
-  var x;
-  var foobar51;
-  obj.met_hod();
-  // Those are invalid.
+var x;
+var foobar51;
+obj.met_hod();
+// Those are invalid.
 // var 3x;
 // obj.3x();
 \end{lstlisting}
 
 \begin{lstlisting}[caption=Identifiers cannot be keywords,
   label=lst:identifiers-keywords,float=\floatpos]
-  // Those are invalid because "if" is a keyword.
+// Those are invalid because "if" is a keyword.
 // var if;
 // obj.if();
-  // However, keywords can be escaped with simple quotes
-  var 'if';
-  obj.'if'();
+// However, keywords can be escaped with simple quotes
+var 'if';
+obj.'if'();
 \end{lstlisting}
 
 \begin{lstlisting}[caption=Escaping identifiers with simple quotes,
   label=lst:escape-identifiers,float=\floatpos]
-  // Identifiers can be escaped with simple quotes
-  var '%x';
-  var '1 2 3';
-  obj.'[]';
+// Identifiers can be escaped with simple quotes
+var '%x';
+var '1 2 3';
+obj.'[]';
 \end{lstlisting}
 
 \subsection{Keywords}
@@ -197,8 +197,9 @@ quotes (\lstinline|'|), as shown in \autoref{lst:escape-keyword}.
 Durations are floats (see \autoref{sec:us-syn-lit-float}) followed by a
 % FIXME: formulation
 time unit. They are simply equivalent to the same float, expressed in
-millisecond. For instance, \lstinline|1s|, which stands for ``one
-second'', is strictly equivalent to \lstinline|1000|. Available units
+millisecond. For instance, \lstinline|1s 1ms|, which stands for ``one
+second and 1 millisecond'', is strictly equivalent to
+\lstinline|1.0001|. Available units
 and their equivalent are shown in \autoref{tab:durations}.
 
 \begin{table}[\floatpos]
